appId: com.bingchillingz1712.MakanMeter
---
- openLink: exp://192.168.1.30:8081

- tapOn: 
      id: 'navigate-tab'
      index: 1
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: 
      id: 'navigate-tab'
      index: 2
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: 
      id: 'navigate-tab'
      index: 3
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: 
      id: 'navigate-tab'
      index: 0
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: 
      id: 'add-food-button'